# nu_tyo_lab_analysis

./: .gitignore  README.md  pyproject.toml
analysis/: schemas.py  util.py
diagrams/architecture/: postproc_block.mmd
diagrams/procedures/: ale_workflow.mmd  ale_workflow_simple.mmd  ∆argB∆astA.mmd
diagrams/project/: cgp_second_quarter.mmd  cgp_second_quarter_1.mmd
figures/: pk_exp007_AginineTitrationResponse.eps
nb/: A2_reaction_fig.ipynb  grids.ipynb  pk_exp002_od_curves.ipynb  scratch.ipynb
nb/comp/: catfunc_env.ipynb
nb/exp/: bfx_adp1.ipynb  cheminfo.ipynb  math.ipynb  math_cgp_yields.ipynb  pk_exp003_exp004_analysis.ipynb  pk_exp003_repeat_N+_to_N-.ipynb  pk_exp004_N+_to_dosedN.ipynb  pk_exp005_arg+_to_arg-.ipynb  pk_exp006_arg+_to_Arg_dosed.ipynb  pk_exp007_AginineTitrationResponse.ipynb  pk_exp007_ArgTitrationReponse_redo.ipynb  pk_exp008_∆argB_∆astA_Arg_titration.ipynb  pk_exp009_∆argB_∆astA_Arg_titration.ipynb  pk_exp010_NC_confirm_with_wash.ipynb
nb/misc/: bfx_adp1.ipynb  demo_bokeh.ipynb  glyphs_lab.ipynb  nu_swatches.ipynb  pdf_convert.ipynb
nb/misc/nu_swatches/: NWU Purple Color Palette - CMYK Coated.ase  NWU Purple Color Palette - CMYK Uncoated.ase  NWU Purple Color Palette - RGB.ase  NWU Secondary Colors - CMYK.ase  (+1 more)
seq/: Acinetobacter-baylyi-ADP1-ISx.gff3.gz.tbi  NC_005966.1.fa  NC_005966.1_all_orf.fa
seq/confirm/: J5H22K_1_cphAI_argBSL_c1.ab1  J5H22K_2_cphAI_argBSL_c5.ab1  J5H22K_3_WT_argBSL_c3.ab1  J5H22K_4_WT_argBSL_c4.ab1  J5H22K_5_argR_astA_astC_LP.ab1  LX5FH3_1_cphAI_argR_astA_C_LP_c2.ab1  LX5FH3_2_WT_argR_astA_C_LP_c2.ab1
