[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Pavel Katsev <pkatsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
bokeh = "^3.5.0"
more-itertools = "^10.3.0"
scikit-learn = "^1.5.1"
chemprop = "^2.0.3"
rdkit = "^2024.3.3"
keras = "^3.4.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
plotly = "^5.23.0"
natsort = "^8.4.0"
pint = "^0.24.3"
statsmodels = "^0.14.2"
quantities = "^0.16.0"
ipyaggrid = "^0.5.4"
pyspread = "^2.3"
pandera = "^0.20.4"
swatch = "^0.4.0"
kaleido = "0.2.1"
biopython = "^1.84"
pdf2image = "^1.17.0"
python-pptx = "^1.0.2"
pysam = "^0.22.1"
uncertainties = "^3.2.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
jupyterlab-vim = "^4.1.3"
voila = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
